<resources>
    <string name="app_name">Earthquake</string>

    <string name="Earthquake">Earthquake</string>
    <string name="action_settings">Settings</string>
    <string name="quake_feed">http://earthquake.usgs.gov/earthquakes/catalogs/7day-M2.5.xml</string>
    <string name="title_activity_preferences">preferences</string>
    <string name="menu_update">Refresh Earthquakes</string>
    <string name="auto_update_prompt">Auto Update</string>
    <string name="update_freq_prompt">Update Frequency</string>
    <string name="min_quake_mag_prompt">Minimum Quake Magnitude</string>
    <string name="menu_preferences">Preferences</string>
    <string name="search_description">Search earthquake locations</string>

    <string name="menu_preferences_item">Preferences</string>
    <string name="menu_test_item">Test</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_fullscreen">FullScreen mode</string>
</resources>
