<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_preferences"
        android:title="@string/menu_preferences"
        android:showAsAction="never">

    </item>
    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:showAsAction="ifRoom|collapseActionView"></item>
    <item
        android:id="@+id/menu_fullscreen"
        android:title="@string/menu_fullscreen"
        android:icon="@android:drawable/ic_menu_crop"
        android:showAsAction="ifRoom"
        android:checkable="true"
        android:checked="false">

    </item>

</menu>